@startuml
'https://plantuml.com/class-diagram

entity "Actor" as e01 {
  *id : number <<generated>>
  --
  *name : text
  *agentPhone : text
}

entity "Director" as e02 {
  *id : number <<generated>>
  --
  *name : text
  *company : text
}

entity "Oscar" as e03 {
  *id : number <<generated>>
  --
  *nomination : text
}

e01 |o..o{ e03
e02 |o..o{ e03

@enduml